<resources>
    <string name="app_name">SpotifyClone</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="startL_header1">Millions of Songs.</string>
    <string name="startL_header2">Free on Spotify.</string>
    <string name="startL_btn_signUp">Sign up free</string>
    <string name="startL_btn_google">Continue with Google</string>
    <string name="startL_btn_facebook">Continue with Facebook</string>
    <string name="startL_txt_login">Log in</string>


    <string name="sign_txt_create">Create account</string>
    <string name="sign_txt_label">What’s your email?</string>
    <string name="sign_txt_description">You’ll need to confirm this email later.</string>
    <string name="sign_btn_next">Next</string>


    <string name="sign3_txt_label">What’s your gender?</string>
    <string name="sign3_btn_men">Men</string>
    <string name="sign3_btn_women">Women</string>
    <string name="sign3_btn_other">Other</string>

    <string name="sign4_txt_label">What\'s your name?</string>
    <string name="sign4_txt_description">This appears on your spotify profile</string>
    <string name="sign4_txt_agree">By tapping on Create Account , you agree to the spotify Terms of Use.</string>
    <string name="sign4_txt_terms">Terms of use</string>
    <string name="sign4_txt_agree2">to learn more about how Spotify collect, uses, shares and protects your personal data, Please see the Spotify Privacy Policy..</string>
    <string name="sign4_txt_privacy">Privacy Policy</string>
    <string name="sign4_txt_accept">Please send me news and offers from Spotify</string>
    <string name="sign4_txt_accept2">Share my registration data with Spotify\'s content providers for marketing purposes</string>
    <string name="sign4_btn_create">Create an account</string>


    <string name="choose_txt_header">Choose 3 or more artists you like.</string>

    <string name="home_txt_welcome">Good morning!</string>
    <string name="home_btn_music">Music</string>
    <string name="home_btn_podcast">Podcasts</string>
    <string name="home_txt_recently">Recently played</string>
    <string name="home_txt_try">Because you love</string>
    <string name="home_txt_popular">Popular albums</string>
    <string name="home_txt_recommended">Recommended albums</string>
    <string name="home_txt_new">New release</string>
    <string name="home_txt_all">All</string>


    <string name="search_txt_search">What do you want to listen to?</string>
    <string name="search_txt_top_genre">Your top genres</string>
    <string name="search_txt_popular_genre">Popular podcast categories</string>
    <string name="search_txt_browse_all">Browse All</string>
    <string name="search_txt_cancel">Cancel</string>


    <string name="library_txt_header">Your Library</string>
    <string name="library_txt_liked_songs">Liked Songs</string>


    <string name="library_txt_playlist">Playlist</string>
    <string name="library_txt_songs">songs</string>

    <string name="settings_txt_header">Settings</string>
    <string name="settings_txt_view_profile">View Profile</string>

    <string name="playlist_txt_header">Give your playlist a name</string>
    <string name="playlist_txt_create">Create</string>
    <string name="playlist_txt_saves">saves</string>
    <string name="playlist_txt_find">Find in playlist</string>
    <string name="playlist_txt_remove">Remove from playlist</string>

    <string name="bottom_sheet_txt_liked">Add to Liked Songs</string>
    <string name="bottom_sheet_txt_playlist">Add to playlist</string>
    <string name="bottom_sheet_txt_remove">Remove from Liked Songs</string>

    <string name="add_playlist_txt">Add to playlist</string>
    <string name="add_playlist_txt_find">Find playlist</string>
    <string name="add_playlist_btn_done">Done</string>

    <string name="liked_songs_txt_find">Find in liked songs</string>
    <string name="liked_songs_txt_header">Liked Songs</string>


    <string name="edit_txt_edit">Edit profile</string>
    <string name="edit_text_save">Save</string>
    <string name="edit_txt_name">Name</string>

    <string name="search_txt_play_love">Play what you love</string>
    <string name="search_txt_search_for">Search for songs</string>

    <string name="language">Choose language</string>


    <string name="navigation_home">Home</string>
    <string name="navigation_search">Search</string>
    <string name="navigation_library">Your Library</string>

    <string name="txt_playlist_edit">Edit</string>


    <string name="setting_account">Account</string>
    <string name="setting_data">Data Saver</string>
    <string name="setting_language">Languages</string>
    <string name="setting_playback">Playback</string>
    <string name="setting_explicit">Explicit Content</string>
    <string name="setting_device">Devices</string>
    <string name="setting_car">Car</string>
    <string name="setting_social">Social</string>
    <string name="setting_storage">Storage</string>
    <string name="setting_logout">Log out</string>

    <string name="sign_create_password">Create a password </string>

    <string name="sign_use_at_least">Use at least 8 characters.</string>

    <string name="sign_missing_password">Password is missing!</string>
    <string name="sign_missing_email">Email is missing!</string>
    <string name="sign_missing_both">Email and password missing!</string>


    <string name="login_email">Email or username</string>
    <string name="login_password">Password</string>
    <string name="login_login">Log in</string>

    <string name="sign_snackbar_email">Fill the user credential!</string>

    <string name="txt_remove_playlist">Remove Playlist</string>

</resources>