<?xml version="1.0" encoding="utf-8"?>


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.fragments.home0.HomeFragment">


            <TextView
                android:id="@+id/txtNewRelease"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/home_txt_new"
                android:textColor="@color/white"
                android:textSize="20sp"
                style="@style/BoldText"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@+id/leftGuideline"
                app:layout_constraintTop_toBottomOf="@+id/recyclerTrySomething" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewNewRelease"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:visibility="gone"
                app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/leftGuideline"
                app:layout_constraintTop_toBottomOf="@+id/txtNewRelease" />

            <TextView
                android:id="@+id/txtRecent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_txt_recently"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="gone"
                style="@style/BoldText"
                app:layout_constraintStart_toStartOf="@+id/leftGuideline"
                app:layout_constraintTop_toBottomOf="@id/topGuideline" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerRecentlyPlayed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:visibility="gone"
                app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
                app:layout_constraintStart_toStartOf="@+id/leftGuideline"
                app:layout_constraintTop_toBottomOf="@+id/txtRecent" />


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/leftGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.04" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/rightGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.96" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/topGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.0" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerTrySomething"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:visibility="gone"
                app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/leftGuideline"
                app:layout_constraintTop_toBottomOf="@+id/txtTry" />

            <TextView
                android:id="@+id/txtTry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/home_txt_try"
                android:textColor="@color/white"
                style="@style/BoldText"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@+id/leftGuideline"
                app:layout_constraintTop_toBottomOf="@+id/recyclerRecentlyPlayed" />


            <TextView
                android:id="@+id/txtPopularAlbums"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/home_txt_popular"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                style="@style/BoldText"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@+id/leftGuideline"
                app:layout_constraintTop_toBottomOf="@+id/recyclerViewNewRelease" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewPopular"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:visibility="gone"
                app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/leftGuideline"
                app:layout_constraintTop_toBottomOf="@+id/txtPopularAlbums" />

            <TextView
                android:id="@+id/txtRecommend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/home_txt_recommended"
                android:textColor="@color/white"
                style="@style/BoldText"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/leftGuideline"
                app:layout_constraintTop_toBottomOf="@+id/recyclerViewPopular"
                app:layout_goneMarginTop="16dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewRecommended"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/leftGuideline"
                app:layout_constraintTop_toBottomOf="@+id/txtRecommend" />





        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


